--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ Version  0.9.1.12
 Fixed:
 	- recruit trial being wrong on game start occasionally
 	- updating garrison log creating crashes due to vehicle arrays
+	- some recruit trials used to produced no recruits
 
 -----------------------
 
