--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,9 +4,11 @@ Fixed:
 	- recruit trial being wrong on game start occasionally
 	- updating garrison log creating crashes due to vehicle arrays
 	- some recruit trials used to produced no recruits
+	- data leak from sprites causing game to randomly crash when doing lots of troop movement
 
 Changed:
 	- player will now get alerts when ship production ceases due to a lack of active forge worlds
+	- new cheat "artifactpopulate" adds a artifact to every planet
 
 -----------------------
 
