controller click refactors

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ Fixed:
 	- some recruit trials used to produced no recruits
 	- data leak from sprites causing game to randomly crash when doing lots of troop movement
 	- general reliability improvements with game memory usage
+	- hopefully fixed problem where faction sprites could occaisionally corrupt making th emain map a cluster fuck
 
 Changed:
 	- player will now get alerts when ship production ceases due to a lack of active forge worlds
