--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,10 @@
+Version  0.9.2.2
+
+	- crash the press t method of ending turn not being updated with modern sewuence
+	- crash with colonists from spelling error
+	- missions will now trigger their end sequences
+
+
 Version  0.9.2.1
 Fixed:
 	- crash from attempting to build new ship
